[gd_scene load_steps=9 format=2]

[ext_resource path="res://Lato-Regular-Font.tres" type="DynamicFontData" id=1]
[ext_resource path="res://App.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]

size = 17
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]

size = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]

font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 470.0
margin_bottom = 267.0
color = Color( 0.0878906, 0.10467, 0.140625, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="SystemSelector" type="OptionButton" parent="."]
margin_left = 160.0
margin_top = 110.0
margin_right = 248.0
margin_bottom = 140.0
text = "x64"
flat = true
items = [ "x64", null, false, -1, null, "x32", null, false, -1, null ]
selected = 0

[node name="OSSelector" type="OptionButton" parent="."]
margin_left = 20.0
margin_top = 110.0
margin_right = 149.0
margin_bottom = 140.0
text = "Windows"
flat = true
items = [ "Windows", null, false, -1, null, "Mac", null, false, -1, null, "Linux", null, false, -1, null ]
selected = 0

[node name="DownloadButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 150.0
margin_right = 250.0
margin_bottom = 200.0
text = "Download"

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 18.0
margin_top = 220.0
margin_right = 450.0
margin_bottom = 244.0
value = 56.08
percent_visible = false

[node name="Title" type="Label" parent="."]
margin_left = 100.0
margin_top = 20.0
margin_right = 310.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 3 )
text = "Godot Nightly"
align = 1

[node name="AboutButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.415686 )
margin_left = 380.0
margin_top = 20.0
margin_right = 438.0
margin_bottom = 47.0
text = "About"
flat = true

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 58, 48 )
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 3 )

[node name="Version" type="Label" parent="."]
margin_left = 106.0
margin_top = 56.0
margin_right = 146.0
margin_bottom = 77.0
text = "v0.1.1"

[node name="Warning" type="RichTextLabel" parent="."]
margin_left = 280.0
margin_top = 110.0
margin_right = 440.0
margin_bottom = 210.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "The stability of these builds is not guaranteed. Use them at your own risk. Official stable releases are available [url=https://godotengine.org/download]here[/url]."
text = "The stability of these builds is not guaranteed. Use them at your own risk. Official stable releases are available here."

[node name="AboutDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -91.0
margin_right = 175.0
margin_bottom = 91.0
window_title = "About Godot Nightly"

[node name="Label2" type="RichTextLabel" parent="AboutDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 342.0
margin_bottom = 139.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "Coded by [url=https://www.patreon.com/coppolaemilio]Emilio Coppola[/url] and [url=https://github.com/coppolaemilio/godot-nightly/graphs/contributors]contributors[/url] 2019. Made with [url=https://godotengine.org]Godot Engine[/url] 3.1
Visit the [url=https://github.com/coppolaemilio/godot-nightly]repository[/url] to file bug reports or contribute!
Builds from [url=https://hugo.pro/projects/godot-builds/]Hugo Lucurcio[/url]'s Unofficial Godot Engine builds"
text = "Coded by Emilio Coppola and contributors 2019. Made with Godot Engine 3.1
Visit the repository to file bug reports or contribute!
Builds from Hugo Lucurcio's Unofficial Godot Engine builds"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="item_selected" from="SystemSelector" to="." method="_on_SystemSelector_item_selected"]
[connection signal="item_selected" from="OSSelector" to="." method="_on_OSSelector_item_selected"]
[connection signal="pressed" from="DownloadButton" to="." method="_on_DownloadButton_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="meta_clicked" from="Warning" to="." method="_on_Warning_meta_clicked"]
[connection signal="meta_clicked" from="AboutDialog/Label2" to="." method="_on_Label2_meta_clicked"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
